--- a/src/.vuepress/override.styl
+++ b/src/.vuepress/override.styl
@@ -1,5 +1,5 @@
 // showing default values
-$accentColor = red
+$accentColor = #0a8d99
 $textColor = #2c3e50
 $borderColor = #eaecef
 $codeBgColor = #282c34
